Fix overflow in markdown comment areas.
Fixes #459.

--- a/bodhi/static/css/site.css
+++ b/bodhi/static/css/site.css
@@ -196,6 +196,13 @@ ul.updateslist li {
 .markdown ul {
     list-style-type: circle;
 }
+.markdown code {
+    white-space: normal !important;
+}
+.markdown p {
+    word-wrap:      break-word; /* old-school */
+    overflow-wrap:  break-word; /* new-school */
+}
 
 #markdown-help strong {
     text-transform: uppercase;
